--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, h1, h2, p, ul, li {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
 }
@@ -14,23 +14,34 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    text-align: center;
     padding: 20px 0;
+    text-align: center;
+}
+
+header h1 {
+    font-size: 2em;
+    margin: 0;
 }
 
 nav {
     background-color: #444;
-    text-align: center;
+    padding: 10px 0;
 }
 
 nav ul {
     list-style: none;
+    margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-nav li {
+nav ul li {
     display: inline;
     margin-right: 20px;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
 }
 
 nav a {
@@ -44,27 +55,19 @@ nav a:hover {
 }
 
 .container {
-    max-width: 960px;
+    max-width: 800px;
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+.container h2 {
+    font-size: 1.5em;
 }
 
-h2 {
-    font-size: 24px;
-    margin-bottom: 15px;
-}
-
-p {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 20px;
+.container p {
+    line-height: 1.6;
 }
 
 footer {
